[gd_scene load_steps=4 format=3 uid="uid://jcr25qlqg3va"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_xh1m3"]
[ext_resource type="PackedScene" uid="uid://dp240gp14xoyx" path="res://Scenes/MenuBackdrop.tscn" id="2_efy7s"]

[sub_resource type="GDScript" id="GDScript_0fwnb"]
script/source = "extends Button
"

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_xh1m3")

[node name="Backdrop" parent="." instance=ExtResource("2_efy7s")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSlider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 487.0
offset_top = 398.0
offset_right = 679.0
offset_bottom = 414.0
max_value = 1.0
step = 0.01
value = 1.0
metadata/_edit_use_anchors_ = true

[node name="CheckButton" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 636.0
offset_top = 428.0
offset_right = 683.0
offset_bottom = 452.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 479.0
offset_top = 422.0
offset_right = 631.0
offset_bottom = 478.0
theme_override_colors/default_color = Color(0.314316, 0.314316, 0.314316, 1)
theme_override_font_sizes/normal_font_size = 23
text = " Mute Sound"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 519.0
offset_top = 350.0
offset_right = 639.0
offset_bottom = 406.0
theme_override_colors/default_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_font_sizes/normal_font_size = 25
text = " Volume"
tab_size = 8
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 506.0
offset_top = 283.0
offset_right = 663.0
offset_bottom = 345.0
text = "Back to game"
script = SubResource("GDScript_0fwnb")

[connection signal="toggled" from="Control/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
