[gd_scene load_steps=3 format=3 uid="uid://d0lje1r7fcex0"]

[ext_resource type="Script" path="res://Settings.gd" id="1_irsaf"]
[ext_resource type="PackedScene" uid="uid://dp240gp14xoyx" path="res://Scenes/MenuBackdrop.tscn" id="2_yrkys"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_irsaf")

[node name="Backdrop" parent="." instance=ExtResource("2_yrkys")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 511.0
offset_top = 275.0
offset_right = 649.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu
"

[node name="HSlider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 487.0
offset_top = 398.0
offset_right = 679.0
offset_bottom = 414.0
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="CheckButton" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 636.0
offset_top = 428.0
offset_right = 683.0
offset_bottom = 452.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 479.0
offset_top = 422.0
offset_right = 631.0
offset_bottom = 478.0
theme_override_colors/default_color = Color(0.314316, 0.314316, 0.314316, 1)
theme_override_font_sizes/normal_font_size = 23
text = " Mute Sound"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
offset_left = 519.0
offset_top = 350.0
offset_right = 639.0
offset_bottom = 406.0
theme_override_colors/default_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_font_sizes/normal_font_size = 25
text = " Volume"
tab_size = 8
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/Menu" to="." method="_on_menu_pressed"]
[connection signal="toggled" from="Control/CheckButton" to="." method="_on_check_button_toggled"]
